--- a/Tutorial_Estructura_Datos_UMG-V1/src/main/java/com/mycompany/tutorial_estructura_datos_umg/v1/Login.form
+++ b/Tutorial_Estructura_Datos_UMG-V1/src/main/java/com/mycompany/tutorial_estructura_datos_umg/v1/Login.form
@@ -114,6 +114,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPasswordField1MouseClicked"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jPasswordField1KeyReleased"/>
       </Events>
       <Constraints>
